prevent scrollbar dissapearence on burger menu

--- a/public/styles/base/_base.scss
+++ b/public/styles/base/_base.scss
@@ -22,4 +22,5 @@ body {
   letter-spacing: 0.36px;
   line-height: 3.2rem;
   background-color: $color-white;
+  scrollbar-gutter: stable;
 }
