--- a/public/styles/components/_offer-card.scss
+++ b/public/styles/components/_offer-card.scss
@@ -20,7 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    padding: 5.6rem 0;
+    padding: 5.6rem 2.4rem;
   }
 
   &__overlay {
@@ -40,7 +40,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 32rem;
+    max-width: 32rem;
+    width: 100%;
     height: 9.6rem;
     border-radius: 2.4rem;
     z-index: 2;
